--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 			  <li><a href="#home">东</a></li>
 			  <li><a href="#services">南</a></li>
 				<li><a href="#clients">西</a></li>
-				<li><a class="https://y.music.163.com/m/user?id=353127181" href="https://y.music.163.com/m/user?id=353127181" target="_blank">北</a></li>
-				<li><a href="#contact">无</a></li>
+		               <li><a class="navbar-header" href="#contact" target="_blank">北</a></li>
+				<li><a href="https://y.music.163.com/m/user?id=353127181" target="_blank">无</a></li>
 			</ul>
 		</nav>
 	</div>
